# rt-one-weekend

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  conanfile.py
include/: aabb.hpp  axis.hpp  bvh.hpp  camera.hpp  color.hpp  degrees_to_radians.hpp  halt.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  map_reduce.hpp  material.hpp  random.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
include/impl/: cimg.hpp
output/: image.ppm
src/: aabb.cpp  bvh.cpp  camera.cpp  color.cpp  degrees_to_radians.cpp  halt.cpp  hit_record.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  random.cpp  ray.cpp  sphere.cpp  vec3.cpp
